--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "tauri": "tauri"
   },
   "dependencies": {
-    "@tauri-apps/api": ">=2.0.0",
+    "@tauri-apps/api": "^1.6.0",
     "@tauri-apps/plugin-shell": ">=2.0.0",
     "lucide-react": "^0.447.0",
     "react": "^18.2.0",
@@ -18,7 +18,9 @@
     "react-markdown": "^9.0.1",
     "rehype-highlight": "^7.0.0",
     "rehype-raw": "^7.0.0",
-    "remark-gfm": "^4.0.0"
+    "remark-gfm": "^4.0.0",
+    "uuid": "^10.0.0",
+    "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
     "@tauri-apps/cli": ">=2.0.0",
