--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "almanac",
+  "name": "zenote",
   "private": true,
   "version": "0.1.0",
   "type": "module",
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@tauri-apps/api": "^1.6.0",
+    "@tauri-apps/plugin-dialog": "~2",
+    "@tauri-apps/plugin-fs": "~2",
     "@tauri-apps/plugin-shell": ">=2.0.0",
     "lucide-react": "^0.447.0",
     "react": "^18.2.0",
@@ -23,7 +25,7 @@
     "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
-    "@tauri-apps/cli": ">=2.0.0",
+    "@tauri-apps/cli": "^2.0.1",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.2.1",
